<resources>

    <string name="app_name">Menu Management System</string>
    <string name="empty_description">"Lorem ipsum dolor sit amet,
        consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>

    #Drawer
    #Labels
    <string name="restaurants_label">Restaurants</string>
    <string name="administrator_page_label">Administrator page</string>
    <string name="manage_label">Manage</string>
    <string name="settings_label">Settings</string>
    #Smth
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="login">Login</string>
    <string name="register_login">Register/Login</string>


    #Restaurant info activity
    #Name
    <string name="restaurant_info">Restaurant info</string>
    #Button labels
    <string name="call_label">Call</string>
    <string name="location_label">Location</string>
    <string name="website_label">Website</string>
    #Image description
    <string name="call_icon_desc">Call icon</string>
    <string name="location_icon_desc">Location icon</string>
    <string name="website_icon_desc">Website icon</string>


    #Registration activity
    #Name
    <string name="registration_label">Registration</string>
    #Input hints
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="username">Username</string>
    #Radiobutton labels
    <string name="user">User</string>
    <string name="administrator">Administrator</string>
    #Button label
    <string name="create_account">Create account</string>
    #TextView
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in"><u>Log in.</u></string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_new_account"><u>Create new account.</u></string>

    #Administrator page
    #Labels
    <string name="change_menu">Change menu</string>
    <string name="send_notification">Send notification</string>
    <string name="edit_restaurant_info">Edit restaurant information</string>
    <string name="manage_templates">Manage templates</string>


    #Hints for input
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="send">Send</string>
    <string name="subtitle">Subtitle</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="dish_name">Name</string>
    <string name="price">Price</string>
    <string name="create">Create</string>
    <string name="new_dish">New Dish</string>
    <string name="add_to_templates">Add to templates</string>

    #Settings
    #Labels
    <string name="change_personal_info">Change personal info</string>
    <string name="manage_notifications">Manage notifications</string>
    <string name="support">Support</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    #Dialogs
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_account_comfirmation">This action will delete all your information.</string>


    #Change personal information
    #button label
    <string name="update">Update</string>


    #Manage
    <string name="users">Users</string>
    <string name="restaurants">Restaurants</string>
    <string name="new_report">New report</string>


    <string name="restaurant_image">Restaurant Image</string>
    <string name="dish_image">Dish Image</string>
    <string name="something_is_wrong">Something is wrong…\n</string>
    <string name="ruble"> ₽</string>
    <string name="delete">Delete</string>
    <string name="show_in_menu">Show in menu</string>
    <string name="wrong_input">Wrong input</string>
    <string name="read_file">Read file</string>
    <string name="edit_template">Edit template</string>
</resources>
