<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/restaurants_label" />
        <item
            android:id="@+id/nav_administrator_page"
            android:icon="@drawable/ic_order_list"
            android:title="@string/administrator_page_label" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_order_list"
            android:title="@string/manage_label" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_label" />
    </group>
</menu>