<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/setPhoto"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_below="@id/toolbar"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/cacio_e_vino" />

        <EditText
            android:id="@+id/setPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/repeatPassword"
            android:layout_centerHorizontal="true"
            android:ems="13"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingTop="12dp" />

        <EditText
            android:id="@+id/repeatPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setPassword"
            android:layout_centerHorizontal="true"
            android:ems="13"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:paddingTop="12dp" />

        <EditText
            android:id="@+id/setPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setUsername"
            android:layout_centerHorizontal="true"
            android:ems="13"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="12dp" />

        <EditText
            android:id="@+id/setUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setPhoto"
            android:layout_centerHorizontal="true"
            android:ems="13"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingTop="18dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setPhoneNumber"
            android:checkedButton="@id/isUser"
            android:paddingTop="12dp">

            <RadioButton
                android:id="@+id/isUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user" />

            <RadioButton
                android:id="@+id/isAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administrator" />

        </RadioGroup>
    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        android:layout_margin="16dp"
        android:text="@string/create_account"
        android:onClick="onClick"/>


</merge>
