<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditTemplateActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/AppTheme.CardViewStyle"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:onClick="onClick"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/dish_image" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dishImage">

                <EditText
                    android:id="@+id/setName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/dish_name"
                    android:inputType="text"
                    android:theme="@style/AppTheme" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutName"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/setDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:theme="@style/AppTheme" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutDescription"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/setPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:theme="@style/AppTheme" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/add_to_templates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutPrice"
                android:layout_centerHorizontal="true"
                android:text="@string/show_in_menu" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/updateButton"
        style="@style/AppTheme.RoundBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/update" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/AppTheme.RoundRedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/delete" />


</merge>
