<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/AppTheme.CardViewStyle"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/setUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:theme="@style/AppTheme" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutUsername"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/setPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:theme="@style/AppTheme" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutPhoneNumber"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/setPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutRepeatPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutPassword"
                android:paddingTop="12dp">

                <EditText
                    android:id="@+id/repeatPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:theme="@style/AppTheme" />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        style="@style/AppTheme.RoundBlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/update" />


</merge>