<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:theme="@style/AppTheme.CardViewStyle"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutTitle"
                android:layout_below="@id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/notificationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ems="15"
                    android:hint="@string/title"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutText"
                android:layout_below="@id/inputLayoutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/notificationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:hint="@string/text"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button"
        style="@style/AppTheme.RoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="onClick"
        android:text="@string/send" />


</merge>