<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@color/colorPrimaryDark">

        <RelativeLayout
            android:id="@+id/settings_change_personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/settings_change_personal_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/change_personal_info"
                android:theme="@style/AppTheme.recycleViewText" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/settings_support_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/support"
                android:theme="@style/AppTheme.recycleViewText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/settings_support_text"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/settings_delete_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/delete_account"
                android:theme="@style/AppTheme.recycleViewText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/settings_delete_account_text"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/settings_logout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/log_out"
                android:theme="@style/AppTheme.recycleViewText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/settings_logout_text"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
