<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/change_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/change_menu_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/change_menu"
                android:theme="@style/AppTheme.recycleViewText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/change_menu_text"
                android:background="?android:attr/listDivider" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/send_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/send_notification_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/send_notification"
                android:theme="@style/AppTheme.recycleViewText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/send_notification_text"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_restaurant_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/edit_restaurant_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/edit_restaurant_info"
                android:theme="@style/AppTheme.recycleViewText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/edit_restaurant_info_text"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/manage_templates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:theme="@style/AppTheme.recycleViewItem">

            <TextView
                android:id="@+id/manage_templates_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/manage_templates"
                android:theme="@style/AppTheme.recycleViewText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/manage_templates_text"
                android:background="?android:attr/listDivider" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
